# elm-package

./: .gitignore  .stylish-haskell.yaml  Install.hs  LICENSE  Main.hs  README.md  ReadDependencies.hs  Utils.hs  build.json  elm-get.cabal  elm-package.cabal  remover  restart.sh  server  server.sh  usage-brainstorm.txt
Get/: Install.hs  Main.hs  Publish.hs  Registery.hs  Registry.hs  Utils.hs
Model/: Dependencies.hs  Name.hs  Version.hs
Registry/: Main.hs  Server.hs  Utils.hs
Registry/DB/: LibraryVersions.hs
Registry/Generate/: Docs.hs  Elm.hs  Html.hs  Infixes.hs  Listing.hs
Registry/Server/: Route.hs
design-docs/: README.md  api-brainstorm.txt  api.md  build.json  usage-brainstorm.txt
hs/Model/: Name.hs
hs/Registry/: Routes.hs
public/: ColorScheme.elm  Search.elm
public-library/: elm-public-library.cabal
public-library/src/Registry/Generate/: Listing.hs
public-library/website/: run_server
public-library/website/src/: Catalog.elm  DesignGuidelines.elm  Home.elm
public-library/website/src/Website/: Message.elm
public-library/website/src/Website/Docs/: Library.elm
server/: Main.hs
server/DB/: LibraryVersions.hs
src/: Bump.hs  Catalog.elm  Catalog.hs  Diff.hs  Docs.elm  Docs.hs  GitHub.hs  Home.elm  InfixOps.elm  Install.hs  Listing.elm  Main.elm  Main.hs  Manager.hs  Options.hs  Paths_elm_get.hs  Publish.hs  RawInfixes.elm  Store.hs
src/CommandLine/: Arguments.hs  Helpers.hs  Options.hs
src/Decode/: Type.hs
src/Diff/: Compare.hs  Display.hs  Magnitude.hs  Model.hs
src/Elm/Package/: Constraint.hs  Dependencies.hs  Description.hs  Initialize.hs  Name.hs  Paths.hs  Solution.hs  Solver.hs  Version.hs
src/Get/: Dependencies.hs  Init.hs  Install.hs  Library.hs  Main.hs  Options.hs  Publish.hs  Registry.hs
src/Install/: Fetch.hs  Plan.hs  Solver.hs
src/Model/: Documentation.hs
src/Package/: Constraint.hs  Dependencies.hs  Description.hs  Name.hs  Paths.hs  Version.hs
src/Registry/: Remover.hs  Routes.hs  Server.hs
src/Registry/Generate/: Docs.hs  Elm.hs  Html.hs  Listing.hs
src/Reporting/: Error.hs
src/Utils/: Cache.hs  Commands.hs  Http.hs  Paths.hs  PrettyJson.hs  ResolveDeps.hs  SemverCheck.hs
src/Utils/Model/: Dependencies.hs  Documentation.hs  Name.hs  Version.hs
src/Website/: Skeleton.elm
tests/: ComparisonTests.hs  SolverTests.hs  Tests.hs
website/: LICENSE  elm-public-library.cabal  run_server
website/content/: whitelist.json
website/content/src/: Catalog.elm  Documentation.elm  Home.elm
website/content/src/Website/: Skeleton.elm
website/content/src/Website/Docs/: Entry.elm  Library.elm
website/server/: NativeWhitelist.hs  Remover.hs  Routes.hs  Server.hs
website/server/Generate/: Docs.hs  Elm.hs  Html.hs  Listing.hs
website/server/Registry/: Routes.hs  Server.hs
website/server/Registry/Generate/: Elm.hs  Listing.hs
website/src/: Catalog.elm  DesignGuidelines.elm  Docs.elm  Documentation.elm  Home.elm  Search.elm
website/src/Website/: Skeleton.elm
website/src/Website/Docs/: Library.elm
website/website/src/Website/Docs/: Entry.elm
