Name:                elm-get
Version:             0.1.3
Synopsis:            Tool for sharing and using Elm libraries
Description:         elm-get lets you install, update, and publish Elm libraries

Homepage:            http://github.com/elm-lang/elm-get

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2013-2014 Evan Czaplicki

Category:            Language

Build-type:          Simple
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/elm-get.git

Library
  ghc-options:         -threaded -O2 -W
  Hs-Source-Dirs:      src
  exposed-modules:     Utils.Commands,
                       Utils.Http,
                       Utils.Paths
  Build-depends:       aeson >= 0.7 && < 0.9,
                       base >=4.2 && <5,
                       bytestring >= 0.9 && < 0.11,
                       directory >= 1.0 && < 2.0,
                       Elm >= 0.13 && < 0.14,
                       filepath >= 1 && < 2.0,
                       http-client >= 0.3 && < 0.4,
                       http-client-tls >= 0.2 && < 0.3,
                       http-types >= 0.7 && < 0.9,
                       mtl >= 2 && < 3,
                       network >= 2.4 && < 2.7,
                       process >= 1 && < 2,
                       vector >= 0.10 && < 0.11

Executable elm-get
  ghc-options:         -threaded -O2 -W
  Hs-Source-Dirs:      src
  Main-is:             Get/Main.hs
  other-modules:       Get.Dependencies,
                       Get.Init,
                       Get.Install,
                       Get.Library,
                       Get.Options,
                       Get.Publish,
                       Get.Registry,
                       Utils.Commands,
                       Utils.Http,
                       Utils.Paths
  Build-depends:       aeson >= 0.7 && < 0.9,
                       aeson-pretty >= 0.7 && < 0.8,
                       ansi-wl-pprint >= 0.6 && < 0.7,
                       base >=4.2 && <5,
                       binary >= 0.7 && < 0.8,
                       bytestring >= 0.9 && < 0.11,
                       containers >= 0.3 && < 0.6,
                       directory >= 1.0 && < 2.0,
                       Elm >= 0.13 && < 0.14,
                       filepath >= 1 && < 2.0,
                       HTTP >= 4000.2.5 && < 4000.3,
                       http-client >= 0.3 && < 0.4,
                       http-client-tls >= 0.2 && < 0.3,
                       http-types >= 0.7 && < 0.9,
                       mtl >= 2 && < 3,
                       network >= 2.4 && < 2.7,
                       optparse-applicative >= 0.8.1 && < 0.11,
                       process >= 1 && < 2,
                       vector >= 0.10 && < 0.11
