Name:                elm-package
Version:             0.1
Synopsis:            Package manager for Elm libraries
Description:         elm-package is a package manager that lets you install,
                     update, and publish Elm libraries.

Homepage:            http://github.com/elm-lang/elm-package

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2013-2014 Evan Czaplicki

Category:            Language

Build-type:          Simple
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/elm-lang/elm-package.git

Library
  ghc-options:         -threaded -O2 -W
  Hs-Source-Dirs:      src
  exposed-modules:     Utils.Commands,
                       Utils.Http,
                       Utils.Paths
  Build-depends:       aeson-pretty,
                       aeson,
                       base >=4.2 && <5,
                       binary,
                       bytestring,
                       containers,
                       directory,
                       Elm >= 0.12.2,
                       filepath,
                       HTTP,
                       http-client >= 0.3,
                       http-client-tls,
                       http-types,
                       json,
                       mtl,
                       network,
                       optparse-applicative,
                       pretty,
                       process,
                       resourcet,
                       text,
                       time,
                       vector

Executable elm-package
  ghc-options:         -threaded -O2 -W
  Hs-Source-Dirs:      src
  Main-is:             Get/Main.hs
  other-modules:       Get.Dependencies,
                       Get.Install,
                       Get.Library,
                       Get.Options,
                       Get.Publish,
                       Get.Registry,
                       Utils.Commands,
                       Utils.Http,
                       Utils.Paths,
                       Utils.ResolveDeps
  Build-depends:       aeson,
                       aeson-pretty,
                       ansi-wl-pprint,
                       base >=4.2 && <5,
                       binary,
                       bytestring,
                       containers,
                       directory,
                       Elm >= 0.12.2,
                       filepath,
                       HTTP,
                       http-client >= 0.3,
                       http-client-tls,
                       http-types,
                       json,
                       mtl,
                       network,
                       optparse-applicative,
                       pretty,
                       process,
                       resourcet,
                       text,
                       time,
                       vector

Test-suite unit-test
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      tests, src
  Main-is:             Tests.hs
  Other-modules:       SolverTests
  Build-depends:       aeson,
                       aeson-pretty,
                       ansi-wl-pprint,
                       base >=4.2 && <5,
                       binary,
                       bytestring,
                       containers,
                       directory,
                       Elm >= 0.12.2,
                       filepath,
                       HTTP,
                       HUnit,
                       http-client >= 0.3,
                       http-client-tls,
                       http-types,
                       json,
                       mtl,
                       network,
                       optparse-applicative,
                       pretty,
                       process,
                       resourcet,
                       test-framework,
                       test-framework-hunit,
                       text,
                       time,
                       vector
