Name: elm-package
Version: 0.2

Synopsis:
    Package manager for Elm libraries
Description:
    elm-package is a package manager that lets you install, update, and
    publish Elm libraries.

Homepage:
    http://github.com/elm-lang/elm-package

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright: (c) 2013-2014 Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-package.git

Library
    ghc-options:
        -threaded -O2 -W

    Hs-Source-Dirs:
        src

    exposed-modules:
        Elm.Package.Constraint,
        Elm.Package.Description,
        Elm.Package.Initialize,
        Elm.Package.Name,
        Elm.Package.Paths,
        Elm.Package.Solution,
        Elm.Package.Version,
        GitHub

    other-modules:
        Catalog,
        CommandLine.Helpers,
        Install,
        Install.Fetch,
        Install.Plan,
        Install.Solver,
        Manager,
        Paths_elm_package,
        Store,
        Utils.Http

    Build-depends:
        aeson >= 0.7 && < 0.9,
        aeson-pretty >= 0.7 && < 0.8,
        base >=4.2 && <5,
        binary >= 0.7 && < 0.8,
        containers >= 0.3 && < 0.6,
        bytestring >= 0.9 && < 0.11,
        directory >= 1.0 && < 2.0,
        elm-compiler >= 0.14 && < 0.15,
        filepath >= 1 && < 2.0,
        HTTP >= 4000.2.5 && < 4000.3,
        http-client >= 0.3 && < 0.4,
        http-client-tls >= 0.2 && < 0.3,
        http-types >= 0.7 && < 0.9,
        mtl >= 2 && < 3,
        network >= 2.4 && < 2.7,
        process >= 1 && < 2,
        text,
        time,
        unordered-containers,
        vector >= 0.10 && < 0.11,
        zip-archive


Executable elm-package
    ghc-options:
        -threaded -O2 -W

    Hs-Source-Dirs:
        src

    Main-is:
        Main.hs

    other-modules:
        Bump,
        Catalog,
        CommandLine.Arguments,
        CommandLine.Helpers,
        Diff,
        Diff.Compare,
        Diff.Display,
        Docs,
        Elm.Package.Constraint,
        Elm.Package.Description,
        Elm.Package.Initialize,
        Elm.Package.Name,
        Elm.Package.Paths,
        Elm.Package.Solution,
        Elm.Package.Version,
        GitHub,
        Install,
        Install.Fetch,
        Install.Plan,
        Install.Solver,
        Manager,
        Publish,
        Store,
        Utils.Http,
        Utils.Paths

    Build-depends:
        aeson >= 0.7 && < 0.9,
        aeson-pretty >= 0.7 && < 0.8,
        ansi-wl-pprint >= 0.6 && < 0.7,
        base >=4.2 && <5,
        binary >= 0.7 && < 0.8,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        elm-compiler >= 0.14 && < 0.15,
        filepath >= 1 && < 2.0,
        HTTP >= 4000.2.5 && < 4000.3,
        http-client >= 0.3 && < 0.4,
        http-client-tls >= 0.2 && < 0.3,
        http-types >= 0.7 && < 0.9,
        mtl >= 2 && < 3,
        network >= 2.4 && < 2.7,
        optparse-applicative >= 0.8.1 && < 0.11,
        pretty,
        process >= 1 && < 2,
        text,
        time,
        unordered-containers,
        vector >= 0.10 && < 0.11,
        zip-archive

Test-suite unit-test
    Type:
        exitcode-stdio-1.0

    Hs-Source-Dirs:
        tests, src

    Main-is:
        Tests.hs

    Other-modules:
        SolverTests

    Build-depends:
        aeson,
        aeson-pretty,
        ansi-wl-pprint,
        base >=4.2 && <5,
        binary,
        bytestring,
        containers,
        directory,
        elm-compiler >= 0.14 && < 0.15,
        filepath,
        HTTP,
        HUnit,
        http-client >= 0.3,
        http-client-tls,
        http-types,
        json,
        mtl,
        network,
        optparse-applicative,
        pretty,
        process,
        resourcet,
        test-framework,
        test-framework-hunit,
        text,
        time,
        unordered-containers,
        vector
