Name: elm-package
Version: 0.18

Synopsis:
    Package manager for Elm libraries
Description:
    elm-package is a package manager that lets you install, update, and
    publish Elm libraries.

Homepage:
    http://github.com/elm-lang/elm-package

License: BSD3
License-file: LICENSE

Author:     Evan Czaplicki
Maintainer: info@elm-lang.org
Copyright:  Copyright: (c) 2013-2014 Evan Czaplicki

Category: Language

Build-type: Simple
Cabal-version: >=1.9

source-repository head
    type:     git
    location: git://github.com/elm-lang/elm-package.git

Library
    ghc-options:
        -threaded -O2 -W

    Hs-Source-Dirs:
        src

    exposed-modules:
        Elm.Package.Constraint,
        Elm.Package.Description,
        Elm.Package.Initialize,
        Elm.Package.Paths,
        Elm.Package.Solution,
        GitHub

    other-modules:
        Catalog,
        CommandLine.Helpers,
        Diff.Magnitude,
        Install,
        Install.Fetch,
        Install.Plan,
        Install.Solver,
        Manager,
        Paths_elm_package,
        Reporting.Error,
        Store,
        Utils.Http

    Build-depends:
        aeson >= 0.11,
        aeson-pretty,
        ansi-wl-pprint >= 0.6.7.3,
        base >=4.2 && <5,
        binary >= 0.7 && < 0.8,
        containers >= 0.3 && < 0.6,
        bytestring >= 0.9 && < 0.11,
        directory >= 1.0 && < 2.0,
        edit-distance,
        elm-compiler == 0.18,
        filepath >= 1 && < 2.0,
        HTTP >= 4000.2.5 && < 4000.4,
        http-client >= 0.4.15 && < 0.5,
        http-client-tls >= 0.2 && < 0.3,
        http-types >= 0.7 && < 0.9,
        mtl >= 2.2.1 && < 3,
        network >= 2.4 && < 2.7,
        parallel-io,
        text,
        time,
        unordered-containers,
        vector >= 0.10 && < 0.12,
        zip-archive


Executable elm-package
    ghc-options:
        -threaded -O2 -W

    Hs-Source-Dirs:
        src

    Main-is:
        Main.hs

    other-modules:
        Bump,
        Catalog,
        CommandLine.Arguments,
        CommandLine.Helpers,
        Diff,
        Diff.Compare,
        Diff.Display,
        Diff.Magnitude,
        Docs,
        Elm.Package.Constraint,
        Elm.Package.Description,
        Elm.Package.Initialize,
        Elm.Package.Paths,
        Elm.Package.Solution,
        GitHub,
        Install,
        Install.Fetch,
        Install.Plan,
        Install.Solver,
        Manager,
        Publish,
        Reporting.Error,
        Store,
        Utils.Http,
        Utils.Paths,
        Paths_elm_package

    Build-depends:
        aeson >= 0.11,
        aeson-pretty,
        ansi-wl-pprint >= 0.6 && < 0.7,
        base >=4.2 && <5,
        binary >= 0.7 && < 0.8,
        bytestring >= 0.9 && < 0.11,
        containers >= 0.3 && < 0.6,
        directory >= 1.0 && < 2.0,
        edit-distance,
        elm-compiler == 0.18,
        filepath >= 1 && < 2.0,
        HTTP >= 4000.2.5 && < 4000.4,
        http-client >= 0.3 && < 0.5,
        http-client-tls >= 0.2 && < 0.3,
        http-types >= 0.7 && < 0.9,
        mtl >= 2 && < 3,
        network >= 2.4 && < 2.7,
        optparse-applicative >= 0.11 && < 0.14,
        parallel-io,
        pretty,
        text,
        time,
        unordered-containers,
        vector >= 0.10 && < 0.12,
        zip-archive
