Name:                elm-public-library
Version:             0.1
Synopsis:            Server for hosting the Elm Public Library
Description:         Generates web pages for docemuntation

Homepage:            http://library.elm-lang.org

License:             BSD3
License-file:        LICENSE

Author:              Evan Czaplicki
Maintainer:          info@elm-lang.org
Copyright:           Copyright: (c) 2013-2014 Evan Czaplicki

Category:            Language

Build-type:          Simple
Cabal-version:       >=1.9

source-repository head
  type:     git
  location: git://github.com/evancz/elm-get.git

Executable elm-public-library
  hs-source-dirs:     src
  Main-is:            Registry/Server.hs
  ghc-options:        -threaded -O2 -W -rtsopts

  Build-depends:      aeson,
                      base >=4.2 && <5,
                      binary,
                      blaze-html,  
                      bytestring,
                      cmdargs,
                      containers,
                      Elm >= 0.12,
                      elm-get >= 0.1,
                      directory,
                      filepath,
                      http-client >= 0.2 && <0.3,
                      http-types,
                      mtl,
                      network,
                      parsec,
                      process,
                      snap-core,
                      snap-server,
                      unordered-containers,
                      vector

